# picoTemperature

./: .gitmodules  CMakeLists.txt  README  README.md
doc/: teplomer.sch
src/: CMakeLists.txt  flash.sh  gpio_pico.cpp  gpio_pico.h  main.cpp  main_wifi.cpp  modbus_api.cpp  modbus_api.h  picotool  srcVersions.h  temp_sensor.cpp  temp_sensor.h  version.cmake
